Bind TokensLedger as BackingStore singleton to permit interception
Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>